# jupyter-shared-drive

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  install.json  jupyter-lite.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  typedoc.json
.github/workflows/: deploy.yml  publish.yml  test.yml
projects/jupyter-server-signaling/: pyproject.toml
projects/jupyter-server-signaling/jupyter_server_signaling/: __init__.py  app.py  handlers.py
projects/jupyter-shared-docprovider/: README.md  install.json  pyproject.toml
projects/jupyter-shared-docprovider/jupyter_shared_docprovider/: __init__.py
projects/jupyter-shared-drive/: README.md  pyproject.toml
projects/jupyter-shared-drive-ui/: README.md  install.json  pyproject.toml
projects/jupyter-shared-drive-ui/jupyter_shared_drive_ui/: __init__.py
projects/jupyter-shared-drive/jupyter_shared_drive/: __init__.py
scripts/: bump_version.py
